# inicpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_8md_source.html  annotated.html  annotated_dup.js  classes.html  classinicpp_1_1ambiguity__exception-members.html  classinicpp_1_1ambiguity__exception.html  classinicpp_1_1ambiguity__exception.js  classinicpp_1_1bad__cast__exception-members.html  classinicpp_1_1bad__cast__exception.html  classinicpp_1_1bad__cast__exception.js  classinicpp_1_1config-members.html  classinicpp_1_1config.html  classinicpp_1_1config.js  classinicpp_1_1config__iterator-members.html  classinicpp_1_1config__iterator.html  classinicpp_1_1config__iterator.js  classinicpp_1_1exception-members.html  classinicpp_1_1exception.html  classinicpp_1_1exception.js  classinicpp_1_1internal__enum__type-members.html  classinicpp_1_1internal__enum__type.html  classinicpp_1_1internal__enum__type.js  classinicpp_1_1invalid__config__exception-members.html  classinicpp_1_1invalid__config__exception.html  classinicpp_1_1invalid__config__exception.js  classinicpp_1_1invalid__type__exception-members.html  classinicpp_1_1invalid__type__exception.html  classinicpp_1_1invalid__type__exception.js  classinicpp_1_1not__found__exception-members.html  classinicpp_1_1not__found__exception.html  classinicpp_1_1not__found__exception.js  classinicpp_1_1not__implemented__exception-members.html  classinicpp_1_1not__implemented__exception.html  (+127 more)
.github/workflows/: build.yml  linux-build.yml  windows-build.yml
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp  output.txt
examples/schema_validation/: CMakeLists.txt  main.cpp  output.txt
include/inicpp/: config.h  dll.h  exception.h  inicpp.h  option.h  option_schema.h  parser.h  schema.h  section.h  section_schema.h  string_utils.h  types.h
rpm/: inicpp-cmake.patch  inicpp.spec
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+16 more)
src/: config.cpp  config.h  config_iterator.cpp  config_iterator.h  exception.cpp  exception.h  option.cpp  option.h  option_schema.cpp  option_schema.h  option_type.h  parser.cpp  parser.h  schema.cpp  schema.h  schema_mode.h  section.cpp  section.h  section_iterator.cpp  section_iterator.h  section_schema.cpp  section_schema.h  string_utils.cpp  string_utils.h  types.h
tests/: CMakeLists.txt  config.cpp  config_iterator.cpp  exception.cpp  option.cpp  option_schema.cpp  parser.cpp  schema.cpp  section.cpp  section_iterator.cpp  section_schema.cpp  string_utils.cpp  types.cpp
